--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Earth Hero
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: What the world needs now are heroes. Super humans who step up and guide our civilization into the next millennia unscathed.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
